[gd_scene load_steps=14 format=2]

[ext_resource path="res://Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Actors/Components/DetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Components/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Components/Enemy_FSM.gd" type="Script" id=4]
[ext_resource path="res://Hboxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Components/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/HealthDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/WhiteCover.tres" type="Material" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 5.15582

[sub_resource type="CircleShape2D" id=2]
radius = 5.81671

[sub_resource type="CircleShape2D" id=3]
radius = 4.65408

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 17.3396

[sub_resource type="Animation" id=5]
resource_name = "flash_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
"entity",
"targetable",
]]
collision_layer = 16
script = ExtResource( 1 )

[node name="HealthDisplay" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -64 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 8 )
scale = Vector2( 0.27, 0.27 )
region_enabled = true
region_rect = Rect2( 7.24524, 115.647, 170.405, 158.949 )

[node name="DetectionZone" parent="." instance=ExtResource( 2 )]
target_group = "player_entity"

[node name="AllyDetect" parent="." instance=ExtResource( 2 )]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.500687, -14.7703 )
shape = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.315559, -12.6224 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash_hit = SubResource( 5 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ActPoint" type="Position2D" parent="."]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="health_recovered" from="Stats" to="HealthDisplay" method="_on_health_changed"]
[connection signal="health_reduced" from="Stats" to="HealthDisplay" method="_on_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="DetectionZone"]

[editable path="AllyDetect"]

[editable path="SoftCollision"]

[editable path="HitBox"]

[editable path="HurtBox"]
